--- a/Cadastre.Core/Views/Client/AddOrEdit.cshtml
+++ b/Cadastre.Core/Views/Client/AddOrEdit.cshtml
@@ -34,6 +34,10 @@
         @Html.LabelFor(model => model.Country, new { @class = "control-ladel" })
         @Html.EditorFor(model => model.Country, new { htmlAttributes = new { @class = "form-control" } })
     </div>
+    <div class"form-group">
+        @Html.LabelFor(model => model.IsBlackListed, new { @class = "control-ladel" })
+        @Html.EditorFor(model => model.IsBlackListed, new { htmlAttributes = new { @class = "form-control" } })
+    </div>
     <div>
         <input type="submit" value="Сохранить" class="btn btn-primary" />
         <input type="reset" value="Сбросить" class="btn" />
