--- a/Cadastre.Core/Views/Shared/_Layout.cshtml
+++ b/Cadastre.Core/Views/Shared/_Layout.cshtml
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Кадастровый учет</title>
 
-    <link href="~/lib/jquery-ui/themes/base/jquery-ui.min.css" rel="stylesheet" />
+    
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/lib/jquery-ui/themes/base/jquery-ui.min.css" rel="stylesheet" />
+
+
 </head>
 <body>
     <div class="container body-content">
@@ -17,15 +20,11 @@
         </footer>
     </div>
 
-    <!--<script src="~/Scripts/jquery-3.4.1.min.js"></script>-->
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <!--<script src="~/Scripts/bootstrap.min.js"></script>-->
+    <script src="~/lib/jquery/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-
-    @*<script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>*@
     <script src="~/lib/jquery-ui/jquery-ui.min.js"></script>
-    @*<script src="~/Scripts/notify.min.js"></script>*@
-    <script src="~/lib/jquery/notify.min.js"></script>
-    @RenderSection("scripts", required: false)
+    <script src="~/lib/jquery/notify.min.js"></script>    
+
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
