--- a/Cadastre.Core/wwwroot/css/site.css
+++ b/Cadastre.Core/wwwroot/css/site.css
@@ -1,3 +1,8 @@
-﻿tr.empty {
-    background: red;
+﻿.field-validation-error {
+    color: #e80c4d;
+    font-weight: bold;
+}
+
+input.input-validation-error {
+    border: 1px solid #e80c4d;
 }
