--- a/Cadastre.Core/Views/Client/Add.cshtml
+++ b/Cadastre.Core/Views/Client/Add.cshtml
@@ -3,16 +3,18 @@
     Layout = null;
 }
 
-@using (Html.BeginForm("AddOrEdit", "Client", FormMethod.Post, new { onsubmit = "return SubmitForm(this)" }))
-{
+@using (Html.BeginForm("Add", "Client", FormMethod.Post, new { onsubmit = "return SubmitForm(this)" }))
+{   
     @Html.HiddenFor(model => model.ClientId)
     <div class"form-group">
         @Html.LabelFor(model => model.ClientName, new { @class = "control-ladel" })
         @Html.EditorFor(model => model.ClientName, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.ClientName)
     </div>
     <div class"form-group">
         @Html.LabelFor(model => model.TypeClient, new { @class = "control-ladel" })
         @Html.EditorFor(model => model.TypeClient, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.TypeClient)
     </div>
     <div class"form-group">
         @Html.LabelFor(model => model.INN, new { @class = "control-ladel" })
@@ -25,6 +27,7 @@
     <div class"form-group">
         @Html.LabelFor(model => model.ActualAddress, new { @class = "control-ladel" })
         @Html.EditorFor(model => model.ActualAddress, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.ActualAddress)
     </div>
     <div class"form-group">
         @Html.LabelFor(model => model.MailingAddress, new { @class = "control-ladel" })
@@ -37,9 +40,10 @@
     <div class"form-group">
         @Html.LabelFor(model => model.IsBlackListed, new { @class = "control-ladel" })
         @Html.EditorFor(model => model.IsBlackListed, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.IsBlackListed)
     </div>
     <div>
-        <input type="submit" value="Сохранить" class="btn btn-primary" />
-        <input type="reset" value="Сбросить" class="btn" />
+        <input type="submit" style="margin-top: 20px" value="Сохранить" class="btn btn-primary" />
+        <input type="reset" style="margin-top: 20px" value="Сбросить" class="btn" />
     </div>
 }
