--- a/Cadastre.Core/Views/Shared/_Layout.cshtml
+++ b/Cadastre.Core/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/lib/jquery-ui/themes/base/jquery-ui.min.css" rel="stylesheet" />
+    <link href="~/css/site.css" rel="stylesheet" />
 
 
 </head>
@@ -22,8 +23,12 @@
 
     <script src="~/lib/jquery/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/lib/jquery-ui/jquery-ui.min.js"></script>
-    <script src="~/lib/jquery/notify.min.js"></script>    
+    <script src="~/lib/jquery/notify.min.js"></script>
+
+
 
     @RenderSection("Scripts", required: false)
 </body>
