--- a/Cadastre.Core/Views/Account/Login.cshtml
+++ b/Cadastre.Core/Views/Account/Login.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Cadastre.Core.Models.User
 
-<h2>Аторизация</h2>
+<h2>Авторизация</h2>
+
 
 <form asp-action="LogIn" asp-controller="Account" asp-anti-forgery="true">
     <div class="validation" asp-validation-summary="ModelOnly" />
@@ -20,3 +21,4 @@
         </div>
     </div>
 </form>
+    
