--- a/Cadastre.Core/Views/Client/Add.cshtml
+++ b/Cadastre.Core/Views/Client/Add.cshtml
@@ -37,10 +37,10 @@
         @Html.LabelFor(model => model.Country, new { @class = "control-ladel" })
         @Html.EditorFor(model => model.Country, new { htmlAttributes = new { @class = "form-control" } })
     </div>
-    <div class"form-group">
+    <div class"form-group" style="margin-top: 20px">
         @Html.LabelFor(model => model.IsBlackListed, new { @class = "control-ladel" })
-        @Html.EditorFor(model => model.IsBlackListed, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.IsBlackListed)
+        @Html.DropDownListFor(user => user.IsBlackListed,
+            new SelectList(Enum.GetNames(typeof(Cadastre.Core.Enums.IsBlackListed))), new { style = "width:70px;" })
     </div>
     <div>
         <input type="submit" style="margin-top: 20px" value="Сохранить" class="btn btn-primary" />
