--- a/Cadastre.Core/Views/Shared/_Layout.cshtml
+++ b/Cadastre.Core/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +9,7 @@
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/lib/jquery-ui/themes/base/jquery-ui.min.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
+    
 
 
 </head>
@@ -21,13 +22,16 @@
         </footer>
     </div>
 
-    <script src="~/lib/jquery/jquery.min.js"></script>
+
+
+    <script src="~/lib/jquery/jquery.min.js"></script>   
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/lib/jquery-ui/jquery-ui.min.js"></script>
     <script src="~/lib/jquery/notify.min.js"></script>
-
+    
 
 
     @RenderSection("Scripts", required: false)
