--- a/Cadastre.Core/wwwroot/css/site.css
+++ b/Cadastre.Core/wwwroot/css/site.css
@@ -15,3 +15,9 @@ body {
 table {
     background-color: #FFFFFF;
 }
+
+.some-page {
+    margin-top: 300px;
+    margin-left: 300px;
+    margin-bottom: 300px;
+}
